feat(SS): Security server maintenance mode management requests in UI
WIP

Refs: XRDDEV-2887